[gd_scene load_steps=36 format=4 uid="uid://il5detmgx7ah"]

[ext_resource type="Script" path="res://Scripts/Game.gd" id="1_wp3rc"]
[ext_resource type="AudioStream" uid="uid://cl4q8kupcn5n4" path="res://Assets/Audio/Ambience/office.ogg" id="2_62orv"]
[ext_resource type="PackedScene" uid="uid://ca4dfgcnwfdul" path="res://Scenes/Instances/Door.tscn" id="2_an0jd"]
[ext_resource type="PackedScene" uid="uid://b8yesertog1hp" path="res://Assets/Models/Map/Map.gltf" id="3_g2d6r"]
[ext_resource type="AudioStream" uid="uid://c7k3fdafuqudf" path="res://Assets/Audio/Ambience/horror.ogg" id="3_rlr10"]
[ext_resource type="FontFile" uid="uid://dox4xpepfxo8l" path="res://Assets/Fonts/fnaf-font.ttf" id="4_nrxcs"]
[ext_resource type="PackedScene" uid="uid://c86v3gkecki1o" path="res://Assets/Models/Freddy/Freddy.glb" id="6_p60d2"]
[ext_resource type="Texture2D" uid="uid://b3yoeidvv7hsw" path="res://Assets/UI/Office/usage.png" id="7_6kkkr"]
[ext_resource type="PackedScene" uid="uid://j28ri3gilss4" path="res://Assets/Models/Bonnie/Bonnie.glb" id="7_ocfym"]
[ext_resource type="Texture2D" uid="uid://coklsv6rlh1ux" path="res://Assets/UI/Camera/border.png" id="8_6yu5e"]
[ext_resource type="PackedScene" uid="uid://duppk4xlcjysc" path="res://Assets/Models/Chica/Chica.glb" id="8_ew5b0"]
[ext_resource type="Texture2D" uid="uid://dxongxibfdf73" path="res://Assets/UI/Camera/cam_animation.png" id="9_ee7e5"]
[ext_resource type="PackedScene" uid="uid://cg8ctg7m5n0am" path="res://Assets/Models/Foxy/Foxy.glb" id="9_qsbao"]
[ext_resource type="Texture2D" uid="uid://qsh25wqlw1yj" path="res://Assets/Models/Map/fnaf_pizzeria_1k_24.png" id="14_rylup"]
[ext_resource type="Texture2D" uid="uid://0xmeunsvsafl" path="res://Assets/Models/Map/fnaf_pizzeria_1k_25.png" id="15_k2bsr"]

[sub_resource type="Environment" id="Environment_jp3n5"]
background_mode = 1
background_color = Color(0.0892011, 0, 0.21, 1)
tonemap_mode = 1
ssil_enabled = true
glow_enabled = true
glow_normalized = true
glow_intensity = 2.5
glow_bloom = 1.0
glow_blend_mode = 0
fog_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.95
volumetric_fog_density = 0.99

[sub_resource type="BoxShape3D" id="BoxShape3D_rj38d"]
size = Vector3(4.50842, 1.39722, 4.65021)

[sub_resource type="BoxMesh" id="BoxMesh_f7qx5"]
size = Vector3(0.05, 0.25, 0.25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0mowl"]
albedo_color = Color(1, 0, 0.0712128, 1)
metallic = 0.5
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1hx0w"]
metallic = 0.5
roughness = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e5m0p"]
resource_name = "puerta_de_seguridad"
cull_mode = 2
albedo_texture = ExtResource("14_rylup")
metallic = 1.0
metallic_texture = ExtResource("15_k2bsr")
metallic_texture_channel = 2
roughness_texture = ExtResource("15_k2bsr")
roughness_texture_channel = 1

[sub_resource type="ArrayMesh" id="ArrayMesh_iobvf"]
_surfaces = [{
"aabb": AABB(-0.167629, -0.951765, -0.448885, 0.335258, 2.01317, 0.949077),
"format": 34896613377,
"index_count": 180,
"index_data": PackedByteArray("DQADAAEADQAOAAMADgAHAAMADgAUAAcAFAAFAAcAFAAaAAUAGgABAAUAGgANAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEABAAIAB8ABAAAAAgAHwAJAB4AHwAIAAkAHgAKAB0AHgAJAAoAHQALABwAHQAKAAsAHAAMABsAHAALAAwAGwANABoAGwAMAA0ABgAfABkABgAEAB8AGQAeABgAGQAfAB4AGAAdABcAGAAeAB0AFwAcABYAFwAdABwAFgAbABUAFgAcABsAFQAaABQAFQAbABoAAgAZABMAAgAGABkAEwAYABIAEwAZABgAEgAXABEAEgAYABcAEQAWABAAEQAXABYAEAAVAA8AEAAWABUADwAUAA4ADwAVABQAAAATAAgAAAACABMACAASAAkACAATABIACQARAAoACQASABEACgAQAAsACgARABAACwAPAAwACwAQAA8ADAAOAA0ADAAPAA4A"),
"name": "puerta_de_seguridad",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAAAAkiT//wAAAAAkSf//AAAAALZt//8AAAAASJL//wAAAADatv//AAAAAGzb//8AAAAAbNsAAAAAAADatgAAAAAAAEiSAAAAAAAAtm0AAAAAAAAkSQAAAAAAAJIkAAAAAP//bNsAAAAA///atgAAAAD//0iSAAAAAP//tm0AAAAA//8kSQAAAAD//5IkAAAAAP//bNv//wAA///atv//AAD//0iS//8AAP//tm3//wAA//8kSf//AAD//5Ik//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_ovjuc"]
resource_name = "Sketchfab_Scene_Object_61"
_surfaces = [{
"aabb": AABB(-0.167629, -0.951765, -0.448885, 0.335258, 2.01317, 0.949077),
"attribute_data": PackedByteArray("iJU2HIiVNhyIlTYczCYxWswmMVrMJjFaf+U2HH/lNhx/5TYcw3YxWsN2MVrDdjFaiJV1OIiVdTiIlXU4zCbxPcwm8T3MJvE9f+V1OH/ldTh/5XU4w3bxPcN28T3DdvE9iJX6A1JxqOJMfTYc7AVPxFJx4/q/51l2GwVZduwFi9y/55WOGwWVjr/n0KYbBdCmv+eo4r/nDL8bBQy/Q3wew7/n4/rMJmxykA4xWkN8WtvHl+P6w3ZscseX4/r/jjFax5cMv8eXqOLHl6jix5cMv8eX0KbHl9Cmx5eVjseXlY5aIeP6x5dZdseXWXZaIeP6f+X6A1ohqOJaIajiu/02HIh74/r/jvE9w3a2JXroWtuIewy/iHuo4lJxDL966B7DiHvQplJx0KaIe5WOUnGVjhsF4/qIe1l2I3KL3FJxWXYbBajiu/11OCNyT8R/5bFQkA7xPYOYWtuDmFrbzCa2JVohDL+DmB7Dg5gew1ohDL9aIdCmWiHQplohlY5aIZWOKyKL3FohWXYrIovcWiFZdkx9dTgrIk/EKyJPxIiVsVA="),
"format": 34896613399,
"index_count": 180,
"index_data": PackedByteArray("KQAJAAMAKQAtAAkALwAVAAoALwBBABUAQgARABcAQgBXABEAVAAEAA8AVAAqAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUADQAaAGQADQACABoAZQAfAGAAZQAbAB8AYQAhAF4AYQAeACEAXgAjAFwAXgAhACMAXAAmAFgAXAAjACYAWQArAFUAWQAnACsAFABnAFMAFAAOAGcAUgBiAE4AUgBmAGIATwBfAEsATwBjAF8ASwBdAEkASwBfAF0ASQBbAEYASQBdAFsARwBWAEMARwBaAFYACABRAD8ACAATAFEAPgBMADsAPgBQAEwAOgBKADcAOgBNAEoANwBIADUANwBKAEgANQBEADMANQBIAEQAMgBAAC4AMgBFAEAAAAA8ABgAAAAGADwAGQA4ABwAGQA9ADgAHQA2ACAAHQA5ADYAIAA0ACIAIAA2ADQAIgAwACUAIgA0ADAAJAAsACgAJAAxACwA"),
"material": SubResource("StandardMaterial3D_e5m0p"),
"name": "puerta_de_seguridad",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 104,
"vertex_data": PackedByteArray("AAAAAP//AAAAAAAA//+qKgAAAAD///8/AAD/////AAAAAP//////PwAA/////6oqAAAAAAAAAAAAAAAAAACqKgAAAAAAAAAAAAD//wAAAAAAAP//AAAAAAAA//8AAKoq//8AAP//qir//wAA////P///AAD///8//////////z////////+qKv////////8///8AAAAAqir//wAAAAAAAP//AAAAAP8//////wAAAAD/////AACqKv////8AAP8/AACSJP//AAAAAJIk////PwAAkiT///8/AACSJP///n8AACRJ////PwAAJEn///8/AAAkSf///n8AACRJ///+fwAAtm3///8/AAC2bf///n8AAEiS////PwAASJL///5/AADatv///z8AANq2////PwAA2rb///5/AADatv///n8AAGzb////PwAAbNv//wAAAABs2////z8AAGzb///+fwAAbNsAAP8/AABs2wAAAAAAAGzbAAAAAAAAbNsAAAAAAADatgAA/z8AANq2AAD/PwAA2rYAAAAAAADatgAAAAAAAEiSAAD/PwAASJIAAAAAAAC2bQAA/z8AALZtAAAAAAAAJEkAAP8/AAAkSQAA/z8AACRJAAAAAAAAJEkAAAAAAACSJAAAAAAAAJIkAAD/PwAAkiQAAAAAAACSJAAAAAD//2zbAAAAAP//bNsAAAAA//9s2wAA/z///2zbAAD/P///2rYAAAAA///atgAAAAD//9q2AAD/P///2rYAAP8///9IkgAAAAD//0iSAAD/P///tm0AAAAA//+2bQAA/z///yRJAAAAAP//JEkAAAAA//8kSQAA/z///yRJAAD/P///kiQAAAAA//+SJAAAAAD//5IkAAD/P///kiQAAP8///9s2////z///2zb///+f///bNv///8///9s2////z///9q2///+f///2rb///5////atv///z///9q2////P///SJL///5///9Ikv///z///7Zt///+f///tm3///8///8kSf///n///yRJ///+f///JEn///8///8kSf///z///5Ik////P///kiT///5///+SJP///z///5Ik////P/8//39UVVVV/3//f/8//3//////VNWqKv8//39UVVVV/7//v/8//3//v/8/VNWqKlRVVVX/f/9//38AAP////9U1aoq/38AAFRVVVX/v/+//38AAP+//z9U1aoq/38AAP8//3//f/7//3//f/9/////f/7//3/+//9/////f////3////9/////f/7//3////9//v//f/7//3////9/////f/7//z//f///////f////3////8//3//f////7//P/9/////f////3////9/////f////3/+//9//v//f/7//3////9//v//f////3////8//3//f////3////+//7//f////7//P/9/AAD/fwAA/3/+//9/////fwAA/38AAP9//v//fwAA/3////9/AAD/f////3////9/AAD/fwAA/3////+//7//fwAA/38AAP//////f////38AAP9/AAD/f////3////9/AAD/fwAA/3////9/AAD/f////38AAP9/////f////38AAP9/AAD/f/9//3////9/AAD/fwAA")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_iobvf")

[sub_resource type="ArrayMesh" id="ArrayMesh_ag6fn"]
_surfaces = [{
"aabb": AABB(-0.167629, -0.951765, -0.448885, 0.335258, 2.01317, 0.949077),
"format": 34896613377,
"index_count": 180,
"index_data": PackedByteArray("DQADAAEADQAOAAMADgAHAAMADgAUAAcAFAAFAAcAFAAaAAUAGgABAAUAGgANAAEAAgAEAAYAAgAAAAQABwABAAMABwAFAAEABAAIAB8ABAAAAAgAHwAJAB4AHwAIAAkAHgAKAB0AHgAJAAoAHQALABwAHQAKAAsAHAAMABsAHAALAAwAGwANABoAGwAMAA0ABgAfABkABgAEAB8AGQAeABgAGQAfAB4AGAAdABcAGAAeAB0AFwAcABYAFwAdABwAFgAbABUAFgAcABsAFQAaABQAFQAbABoAAgAZABMAAgAGABkAEwAYABIAEwAZABgAEgAXABEAEgAYABcAEQAWABAAEQAXABYAEAAVAA8AEAAWABUADwAUAA4ADwAVABQAAAATAAgAAAACABMACAASAAkACAATABIACQARAAoACQASABEACgAQAAsACgARABAACwAPAAwACwAQAA8ADAAOAA0ADAAPAA4A"),
"name": "puerta_de_seguridad",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 32,
"vertex_data": PackedByteArray("AAAAAP//AAAAAP////8AAAAAAAAAAAAAAAD//wAAAAD//wAA//8AAP///////wAA//8AAAAAAAD/////AAAAAAAAkiT//wAAAAAkSf//AAAAALZt//8AAAAASJL//wAAAADatv//AAAAAGzb//8AAAAAbNsAAAAAAADatgAAAAAAAEiSAAAAAAAAtm0AAAAAAAAkSQAAAAAAAJIkAAAAAP//bNsAAAAA///atgAAAAD//0iSAAAAAP//tm0AAAAA//8kSQAAAAD//5IkAAAAAP//bNv//wAA///atv//AAD//0iS//8AAP//tm3//wAA//8kSf//AAD//5Ik//8AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_25l62"]
resource_name = "Sketchfab_Scene_Object_62"
_surfaces = [{
"aabb": AABB(-0.167629, -0.951765, -0.448885, 0.335258, 2.01317, 0.949077),
"attribute_data": PackedByteArray("iJU2HIiVNhyIlTYczCYxWswmMVrMJjFaf+U2HH/lNhx/5TYcw3YxWsN2MVrDdjFaiJV1OIiVdTiIlXU4zCbxPcwm8T3MJvE9f+V1OH/ldTh/5XU4w3bxPcN28T3DdvE9iJX6A1JxqOJMfTYc7AVPxFJx4/q/51l2GwVZduwFi9y/55WOGwWVjr/n0KYbBdCmv+eo4r/nDL8bBQy/Q3wew7/n4/rMJmxykA4xWkN8WtvHl+P6w3ZscseX4/r/jjFax5cMv8eXqOLHl6jix5cMv8eX0KbHl9Cmx5eVjseXlY5aIeP6x5dZdseXWXZaIeP6f+X6A1ohqOJaIajiu/02HIh74/r/jvE9w3a2JXroWtuIewy/iHuo4lJxDL966B7DiHvQplJx0KaIe5WOUnGVjhsF4/qIe1l2I3KL3FJxWXYbBajiu/11OCNyT8R/5bFQkA7xPYOYWtuDmFrbzCa2JVohDL+DmB7Dg5gew1ohDL9aIdCmWiHQplohlY5aIZWOKyKL3FohWXYrIovcWiFZdkx9dTgrIk/EKyJPxIiVsVA="),
"format": 34896613399,
"index_count": 180,
"index_data": PackedByteArray("KQAJAAMAKQAtAAkALwAVAAoALwBBABUAQgARABcAQgBXABEAVAAEAA8AVAAqAAQABwAMABIABwABAAwAFgAFAAsAFgAQAAUADQAaAGQADQACABoAZQAfAGAAZQAbAB8AYQAhAF4AYQAeACEAXgAjAFwAXgAhACMAXAAmAFgAXAAjACYAWQArAFUAWQAnACsAFABnAFMAFAAOAGcAUgBiAE4AUgBmAGIATwBfAEsATwBjAF8ASwBdAEkASwBfAF0ASQBbAEYASQBdAFsARwBWAEMARwBaAFYACABRAD8ACAATAFEAPgBMADsAPgBQAEwAOgBKADcAOgBNAEoANwBIADUANwBKAEgANQBEADMANQBIAEQAMgBAAC4AMgBFAEAAAAA8ABgAAAAGADwAGQA4ABwAGQA9ADgAHQA2ACAAHQA5ADYAIAA0ACIAIAA2ADQAIgAwACUAIgA0ADAAJAAsACgAJAAxACwA"),
"material": SubResource("StandardMaterial3D_e5m0p"),
"name": "puerta_de_seguridad",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 104,
"vertex_data": PackedByteArray("AAAAAP//AAAAAAAA//+qKgAAAAD///8/AAD/////AAAAAP//////PwAA/////6oqAAAAAAAAAAAAAAAAAACqKgAAAAAAAAAAAAD//wAAAAAAAP//AAAAAAAA//8AAKoq//8AAP//qir//wAA////P///AAD///8//////////z////////+qKv////////8///8AAAAAqir//wAAAAAAAP//AAAAAP8//////wAAAAD/////AACqKv////8AAP8/AACSJP//AAAAAJIk////PwAAkiT///8/AACSJP///n8AACRJ////PwAAJEn///8/AAAkSf///n8AACRJ///+fwAAtm3///8/AAC2bf///n8AAEiS////PwAASJL///5/AADatv///z8AANq2////PwAA2rb///5/AADatv///n8AAGzb////PwAAbNv//wAAAABs2////z8AAGzb///+fwAAbNsAAP8/AABs2wAAAAAAAGzbAAAAAAAAbNsAAAAAAADatgAA/z8AANq2AAD/PwAA2rYAAAAAAADatgAAAAAAAEiSAAD/PwAASJIAAAAAAAC2bQAA/z8AALZtAAAAAAAAJEkAAP8/AAAkSQAA/z8AACRJAAAAAAAAJEkAAAAAAACSJAAAAAAAAJIkAAD/PwAAkiQAAAAAAACSJAAAAAD//2zbAAAAAP//bNsAAAAA//9s2wAA/z///2zbAAD/P///2rYAAAAA///atgAAAAD//9q2AAD/P///2rYAAP8///9IkgAAAAD//0iSAAD/P///tm0AAAAA//+2bQAA/z///yRJAAAAAP//JEkAAAAA//8kSQAA/z///yRJAAD/P///kiQAAAAA//+SJAAAAAD//5IkAAD/P///kiQAAP8///9s2////z///2zb///+f///bNv///8///9s2////z///9q2///+f///2rb///5////atv///z///9q2////P///SJL///5///9Ikv///z///7Zt///+f///tm3///8///8kSf///n///yRJ///+f///JEn///8///8kSf///z///5Ik////P///kiT///5///+SJP///z///5Ik////P/8//39UVVVV/3//f/8//3//////VNWqKv8//39UVVVV/7//v/8//3//v/8/VNWqKlRVVVX/f/9//38AAP////9U1aoq/38AAFRVVVX/v/+//38AAP+//z9U1aoq/38AAP8//3//f/7//3//f/9/////f/7//3/+//9/////f////3////9/////f/7//3////9//v//f/7//3////9/////f/7//z//f///////f////3////8//3//f////7//P/9/////f////3////9/////f////3/+//9//v//f/7//3////9//v//f////3////8//3//f////3////+//7//f////7//P/9/AAD/fwAA/3/+//9/////fwAA/38AAP9//v//fwAA/3////9/AAD/f////3////9/AAD/fwAA/3////+//7//fwAA/38AAP//////f////38AAP9/AAD/f////3////9/AAD/fwAA/3////9/AAD/f////38AAP9/////f////38AAP9/AAD/f/9//3////9/AAD/fwAA")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_ag6fn")

[sub_resource type="PlaneMesh" id="PlaneMesh_20v1n"]
size = Vector2(28, 25)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_61ra2"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_jueqo"]
size = Vector3(30.3009, 0.01, 24.0516)

[sub_resource type="Animation" id="Animation_pd3sw"]
resource_name = "OpenCam"
length = 0.37
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraAnim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 0.37),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="Animation" id="Animation_vcpgk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CameraAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CameraAnim:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dgsfx"]
_data = {
"OpenCam": SubResource("Animation_pd3sw"),
"RESET": SubResource("Animation_vcpgk")
}

[sub_resource type="LabelSettings" id="LabelSettings_nmq0v"]
line_spacing = 0.0
font = ExtResource("4_nrxcs")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_th2mw"]
line_spacing = 0.0
font = ExtResource("4_nrxcs")
font_size = 28

[sub_resource type="LabelSettings" id="LabelSettings_2emrs"]
font = ExtResource("4_nrxcs")

[sub_resource type="LabelSettings" id="LabelSettings_1d877"]
font = ExtResource("4_nrxcs")

[node name="Game" type="Node3D"]
script = ExtResource("1_wp3rc")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_jp3n5")

[node name="Spawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Scenes/Instances/Player.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 5

[node name="Players" type="Node3D" parent="."]

[node name="Office" type="Node3D" parent="."]

[node name="OfficeLight" type="OmniLight3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.57884, 9.83344)
light_color = Color(1, 0.613659, 0.222823, 1)
light_energy = 2.0
omni_range = 3.5

[node name="OfficeBulb" type="OmniLight3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0067644, 2.56199, 9.83127)
light_color = Color(1, 0.613659, 0.222823, 1)
light_volumetric_fog_energy = 0.0
shadow_enabled = true
omni_attenuation = 7.0

[node name="OfficeAmb" type="AudioStreamPlayer3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.10619, 1.23986, 8.8275)
stream = ExtResource("2_62orv")
volume_db = -10.0
unit_size = 15.0
max_db = -10.0
autoplay = true
max_distance = 4.0
bus = &"Ambience"

[node name="Area3D" type="Area3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02194, 10.4308)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.15387, -0.198608, -0.700226)
shape = SubResource("BoxShape3D_rj38d")

[node name="LeftWing" type="Node3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.24303, 0, 10.4132)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Office/LeftWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.193552, 1.25693, -0.120483)
mesh = SubResource("BoxMesh_f7qx5")
surface_material_override/0 = SubResource("StandardMaterial3D_0mowl")

[node name="Label3D" type="Label3D" parent="Office/LeftWing/MeshInstance3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0249658, -0.20092, 0.00846481)
text = "door"
font = ExtResource("4_nrxcs")
font_size = 16
uppercase = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Office/LeftWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.193552, 0.895275, -0.120483)
mesh = SubResource("BoxMesh_f7qx5")
surface_material_override/0 = SubResource("StandardMaterial3D_1hx0w")

[node name="Label3D" type="Label3D" parent="Office/LeftWing/MeshInstance3D2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0249658, -0.20092, 0.00846481)
text = "light"
font = ExtResource("4_nrxcs")
font_size = 16
uppercase = true

[node name="DoorL" type="Node3D" parent="Office/LeftWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.064199, 0.953623, -0.958742)

[node name="Object_97" type="MeshInstance3D" parent="Office/LeftWing/DoorL"]
mesh = SubResource("ArrayMesh_ovjuc")
skeleton = NodePath("")

[node name="RightWing" type="Node3D" parent="Office"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.98062, 0, 10.3024)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Office/RightWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.193552, 1.25693, -0.120483)
mesh = SubResource("BoxMesh_f7qx5")
surface_material_override/0 = SubResource("StandardMaterial3D_0mowl")

[node name="Label3D" type="Label3D" parent="Office/RightWing/MeshInstance3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0249658, -0.20092, 0.00846481)
text = "door"
font = ExtResource("4_nrxcs")
font_size = 16
uppercase = true

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Office/RightWing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.193552, 0.895275, -0.120483)
mesh = SubResource("BoxMesh_f7qx5")
surface_material_override/0 = SubResource("StandardMaterial3D_1hx0w")

[node name="Label3D" type="Label3D" parent="Office/RightWing/MeshInstance3D2"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0249658, -0.20092, 0.00846481)
text = "light"
font = ExtResource("4_nrxcs")
font_size = 16
uppercase = true

[node name="DoorR" type="Node3D" parent="Office/RightWing"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.0785869, 0.953623, 0.847994)

[node name="Object_99" type="MeshInstance3D" parent="Office/RightWing/DoorR"]
mesh = SubResource("ArrayMesh_25l62")
skeleton = NodePath("")

[node name="HorrorAmb" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.52731, -3.45389)
stream = ExtResource("3_rlr10")
volume_db = -3.0
unit_size = 2.0
autoplay = true
panning_strength = 0.0
bus = &"Ambience"

[node name="Map" parent="." instance=ExtResource("3_g2d6r")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 1.048, 3, 0.925)
mesh = SubResource("PlaneMesh_20v1n")
surface_material_override/0 = SubResource("StandardMaterial3D_61ra2")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="StaticBody3D" type="StaticBody3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.005, -0.19, 0.203)
shape = SubResource("BoxShape3D_jueqo")

[node name="Freddy" parent="." instance=ExtResource("6_p60d2")]
transform = Transform3D(0.0766044, 0, 0.0642788, 0, 0.1, 0, -0.0642788, 0, 0.0766044, 1.93948, 0.58, -9.09781)

[node name="Bonnie" parent="." instance=ExtResource("7_ocfym")]
transform = Transform3D(0.0766044, 0, 0.0642788, 0, 0.1, 0, -0.0642788, 0, 0.0766044, -2.07903, 0.58, -8.44935)

[node name="Chica" parent="." instance=ExtResource("8_ew5b0")]
transform = Transform3D(0.0766044, 0, 0.0642788, 0, 0.1, 0, -0.0642788, 0, 0.0766044, 0.0836769, 0.58, -8.73177)

[node name="Foxy" parent="." instance=ExtResource("9_qsbao")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -10.4178, 0.58, -0.463755)

[node name="UI" type="CanvasLayer" parent="."]

[node name="CameraAnim" type="Sprite2D" parent="UI"]
visible = false
modulate = Color(1, 0.476504, 0.9326, 1)
texture_filter = 1
texture = ExtResource("9_ee7e5")
centered = false
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/CameraAnim"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dgsfx")
}

[node name="Office" type="Control" parent="UI"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/Office"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Office/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = -4

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="hour" type="Label" parent="UI/Office/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "12"
label_settings = SubResource("LabelSettings_nmq0v")

[node name="Label" type="Label" parent="UI/Office/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "AM"
label_settings = SubResource("LabelSettings_th2mw")

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Label" type="Label" parent="UI/Office/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Night"
label_settings = SubResource("LabelSettings_2emrs")
horizontal_alignment = 2

[node name="night" type="Label" parent="UI/Office/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "1"
label_settings = SubResource("LabelSettings_2emrs")
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/Office/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Office/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Power left:"
label_settings = SubResource("LabelSettings_2emrs")

[node name="power" type="Label" parent="UI/Office/MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "93%"
label_settings = SubResource("LabelSettings_2emrs")

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="UI/Office/MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Usage:"
label_settings = SubResource("LabelSettings_2emrs")

[node name="Sprite2D" type="Sprite2D" parent="UI/Office/MarginContainer/VBoxContainer2/HBoxContainer2"]
position = Vector2(61, 4)
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_6kkkr")
hframes = 5

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/Office/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/Office/MarginContainer/VBoxContainer3/HBoxContainer"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Code:"
label_settings = SubResource("LabelSettings_1d877")

[node name="Code" type="Label" parent="UI/Office/MarginContainer/VBoxContainer3/HBoxContainer"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "<Code>"
label_settings = SubResource("LabelSettings_1d877")

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/Office/MarginContainer/VBoxContainer3"]
layout_mode = 2

[node name="Label2" type="Label" parent="UI/Office/MarginContainer/VBoxContainer3/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Players:"
label_settings = SubResource("LabelSettings_1d877")

[node name="PlayerCountLabel" type="Label" parent="UI/Office/MarginContainer/VBoxContainer3/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.219608)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "1/4"
label_settings = SubResource("LabelSettings_1d877")

[node name="Camera" type="Control" parent="UI"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Border" type="TextureRect" parent="UI/Camera"]
texture_filter = 1
layout_mode = 0
offset_right = 426.0
offset_bottom = 240.0
texture = ExtResource("8_6yu5e")

[node name="Door" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5844, 0.993454, -3.1326)

[node name="Door2" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.5844, 0.993454, 0.639549)

[node name="Door3" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -9.57872, 0.993454, -6.9021)

[node name="BathroomDoor" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.42831, 0.993454, -4.57121)

[node name="KitchenDoor" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(-2.52881e-07, 0, -1, 0, 1, 0, 1, 0, -2.52881e-07, 7.70381, 0.993454, 2.11871)

[node name="ClosetDoor" parent="." instance=ExtResource("2_an0jd")]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, -6.31789, 0.993454, 5.87456)

[connection signal="despawned" from="Spawner" to="." method="_player_disconnected"]
